--- a/package.json
+++ b/package.json
@@ -14,4 +14,9 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
+, "devDependencies": {
+  "mocha": "1.7.0"
+, "should": "1.2.1"
+, "supertest": "0.4.0"
+}
 }
